...
@Composable
fun TaskScreen(navActions: NavigationActions, viewModel: TaskViewModel) {
  val taskState by viewModel.uiState.collectAsState()
  val isMapInteracting = remember { mutableStateOf(false) }

  Scaffold(
      modifier = Modifier.testTag("taskScreen"),
      topBar = {
        TopAppBar(
            title = {
              Text(modifier = Modifier.testTag("taskScreenTitle"), text = taskState.pageTitle)
            },
            navigationIcon = {
              BackButton(
                  contentDescription = "Back",
                  onClick = { navActions.back() },
                  modifier = Modifier.testTag("backButton"))
            })
      },
      contentWindowInsets = WindowInsets(40.dp, 20.dp, 40.dp, 0.dp),
      snackbarHost = {
        SnackbarHost(
            hostState = taskState.snackbarHostState,
...
            horizontalAlignment = Alignment.CenterHorizontally) {
              Box(
                  modifier =
                      Modifier.testTag("eventDropdownChip").padding(bottom = 5.dp).fillMaxWidth()) {
                    var eventExpanded by remember { mutableStateOf(false) }
                    FilterChip(
                        modifier = Modifier.testTag("eventChip"),
                        selected = false,
                        onClick = { eventExpanded = !eventExpanded },
                        label = { Text(taskState.event?.name ?: "Select Event") },
                        trailingIcon = {
                          Icon(
                              imageVector = Icons.Filled.ArrowDropDown,
...
                                  eventExpanded = false
                                })
                          }
                        }
                  }
              OutlinedTextField(
                  modifier = Modifier.testTag("titleField").fillMaxWidth(),
                  value = taskState.title,
                  singleLine = true,
                  onValueChange = { viewModel.setTitle(it) },
                  label = { Text("Title") },
                  isError = taskState.titleError != null,
                  supportingText = { taskState.titleError?.let { Text(it) } })
              OutlinedTextField(
                  modifier = Modifier.testTag("descriptionField").fillMaxWidth(),
                  value = taskState.description,
                  onValueChange = { viewModel.setDescription(it) },
                  label = { Text("Description") },
                  minLines = 3,
                  supportingText = {})
              OutlinedTextField(
                  modifier = Modifier.testTag("categoryField").fillMaxWidth(),
                  value = taskState.category,
                  singleLine = true,
                  onValueChange = { viewModel.setCategory(it) },
                  label = { Text("Category") },
                  supportingText = {})
              OutlinedTextField(
                  modifier = Modifier.testTag("staffNumberField").fillMaxWidth(),
                  value = taskState.staffNumber,
                  singleLine = true,
                  onValueChange = { viewModel.setStaffNumber(it) },
                  label = { Text("Number of Staff") },
                  keyboardOptions =
                      KeyboardOptions.Default.copy(keyboardType = KeyboardType.Decimal),
                  isError = taskState.staffNumberError != null,
                  supportingText = { taskState.staffNumberError?.let { Text(it) } })
              DatePickerWithDialog(
                  modifier = Modifier.testTag("dateField").fillMaxWidth(),
                  value = taskState.date,
                  onDateSelect = { viewModel.setDate(it) },
                  label = { Text("Date") },
                  isError = taskState.dateError != null,
                  supportingText = { taskState.dateError?.let { Text(it) } })
              TimePickerWithDialog(
                  modifier = Modifier.testTag("timeField").fillMaxWidth(),
                  value = taskState.time,
                  onTimeSelect = { viewModel.setTime(it) },
                  label = { Text("Time") },
                  isError = taskState.timeError != null,
                  errorText = { taskState.timeError?.let { Text(it) } })
              TimePickerWithDialog(
                  modifier = Modifier.testTag("durationField").fillMaxWidth(),
                  value = taskState.duration,
                  onTimeSelect = { viewModel.setDuration(it) },
                  label = { Text("Duration") },
                  isError = taskState.durationError != null,
                  errorText = { taskState.durationError?.let { Text(it) } },
                  dialogTitle = "Select Duration",
...
                    },
                    viewModel = viewModel)
              }

              Column {
                Button(
                    modifier = Modifier.testTag("saveButton").fillMaxWidth(),
                    onClick = { viewModel.saveTask() },
                    content = { Text("Save") })
                OutlinedButton(
                    modifier = Modifier.testTag("deleteButton").fillMaxWidth(),
                    onClick = { viewModel.deleteTask() },
                    content = {
                      Text(
                          if (taskState.isNewTask) {
                            "Cancel"
                          } else {
...
