...
      properties = DialogProperties(usePlatformDefaultWidth = false),
  ) {
    Surface(
        shape = MaterialTheme.shapes.extraLarge,
        tonalElevation = 6.dp,
        modifier =
            Modifier.testTag("timePickerDialog")
                .width(IntrinsicSize.Min)
                .height(IntrinsicSize.Min)
                .background(
                    shape = MaterialTheme.shapes.extraLarge,
                    color = MaterialTheme.colorScheme.surface),
    ) {
...
            } else {
              TimeInput(state = timePickerState)
            }
            Row(modifier = Modifier.height(40.dp).fillMaxWidth()) {
              Spacer(modifier = Modifier.weight(1f))
              TextButton(
                  modifier = Modifier.testTag("timePickerDialogCancel"),
                  onClick = { showDialog = false }) {
                    Text("Cancel")
                  }
              TextButton(
                  modifier = Modifier.testTag("timePickerDialogOK"),
                  onClick = {
...
