...
      return
    }

    if (_uiState.value.event == null) {
      CoroutineScope(Dispatchers.Main).launch {
        _uiState.value.snackbarHostState.showSnackbar(
            message = "Event is required", duration = SnackbarDuration.Short)
      }
      return
    }

    val event = _uiState.value.event ?: return

...
